# signalHub

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  PLANNING.md  README.md  SETTINGS_MIGRATION_GUIDE.md  UPDATE_FILES.sh  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Login.jsx  Mappings.jsx  Primitives.css  Queue.jsx  Settings.jsx  Sidebar.jsx  Templates.jsx
frontend/src/theme/: ThemeProvider.jsx  figma-tokens.json  tokens.css  tokens.json
src/signalhub/: __init__.py  app.py  app_updated.py  config.py  handler.py  handler_updated.py  health.py  pushover.py  queue.py  settings_bridge.py
src/signalhub/api/: auth.py  db.py  main.py  models.py  schemas.py  settings_crypto.py  settings_service.py
src/signalhub/api/routes/: auth.py  mappings.py  queue.py  settings.py  templates.py
srv/signalhub/frontend/src/theme/: figma-tokens.json
tests/: test_config.py  test_handler.py  test_pushover.py
