[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signalhub"
version = "0.1.0"
description = "SMTP to Pushover notification bridge"
authors = [ { name = "SignalHub Maintainers" } ]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd",
    "pyyaml",
    "aiohttp"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
signalhub = "signalhub.app:main"
